Enable poll redirection

--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,32 @@
 {
     "manifest_version": 2,
     "name": "Old is better than new",
-    "version": "1.0",
+    "version": "2.0",
     "developer": {
         "name": "Andri Reveli",
         "url": "https://gitlab.com/mercur3/old-is-better-than-new"
     },
     "description": "An extension for Firefox that redirects the request from new Reddit site to the old one.",
+
+    "background": {
+        "scripts": [
+            "src/view.js"
+        ],
+        "persistent": false
+    },
+    "browser_action": {
+        "default_title": "Old is better than new",
+        "default_popup": "src/index.html"
+    },
     "permissions": [
+        "storage",
         "webNavigation",
         "webRequest"
     ],
     "content_scripts": [
         {
             "matches": ["https://www.reddit.com/*"],
-            "js": ["script.js"],
+            "js": ["src/script.js"],
             "run_at": "document_start"
         }
     ]
